--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.php",
   "author": "Wagner Ramos",
   "devDependencies": {
-    "grunt": "^0.4.5",
+     "grunt": ">=1.3.0"
     "grunt-concat-css": "^0.3.1",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-cssmin": "^1.0.2",
